Fix a bug that caused the input box to shift position when the URL bar was expanded. (Fixed #5)

--- a/chrome/urlbar/urlbar.css
+++ b/chrome/urlbar/urlbar.css
@@ -275,6 +275,10 @@
 	flex: 1 !important;
 }
 
+#urlbar[breakout-extend="true"] .urlbar-input-box {
+	transform: translateX(-9px) !important;
+}
+
 #urlbar-input
 {
 	width: 100% !important;
